// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getModTypes 1`] = `
[
  {
    "base": "C",
    "strand": "+",
    "type": "m",
  },
]
`;

exports[`getModTypes 2`] = `
[
  {
    "base": "C",
    "strand": "+",
    "type": "m",
  },
  {
    "base": "C",
    "strand": "+",
    "type": "h",
  },
]
`;

exports[`getModTypes 3`] = `
[
  {
    "base": "C",
    "strand": "+",
    "type": "16061",
  },
]
`;
